# Scalar-Field-Analysis-Engine

./: .gitignore  README.md  project.Theme.code-workspace  project.code-workspace  pyproject.toml
docs/setup/: FIT1047-verify-checklist.md
src/: field_analysis.py  main.ipynb  pixel_clamp.py  plotting.py
src/Renderer/: __init__.py  bridge.py  cli.py  core.py
src/scalar_field_analysis/: __init__.py  analysis.py  pixel_clamp.py  plotting.py
src/scalar_field_analysis/rendering/: __init__.py  cli.py  mesh.py  payload.py  viewer.py
tests/: test_rendering_core.py
